fixed bug nowrap schedule__text in index

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -754,6 +754,9 @@ body {
         &_bold {
             font-weight: 700;
         }
+        &_wrap {
+            white-space: normal;
+        }
     }
     &__imgs {
         overflow: hidden;
